Scope::createFunction does not remove invalid functions from cache, leading to segfault

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 3.1.7
    • Affects Version/s: 3.1.6
    • Component/s: JavaScript
    • None
    • Fully Compatible
    • ALL
    • Platform 7 08/10/15
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      When _createFunction fails to create a function, exceptions are not caught. This leads to a mismatch between the number of functions in the cache and the number actually created, which causes an invalid array access.

      This bug only affects SpiderMonkey and does not affect 3.0.x

            Assignee:
            Mira Carey
            Reporter:
            J Delaney (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: