SERVER-19560 Don't cache invalid js functions